# news-recommendation-tc

./: .gitignore  README.md  main.py  pyproject.toml
docs/: din_id_exclusion.md  feature_engineering_binning.md
examples/: din_save_load_example.py  din_training_example.py  feature_extraction_example.py  rank_pipeline_example.py  recall_pipeline_example.py  youtubednn_cv_example.py  youtubednn_embedding_builder.py  youtubednn_embedding_usage.py
notebooks/: EDA01.ipynb  EDA02.ipynb  EDA03.ipynb  notebook_script.py
src/: __init__.py  dataset.py
src/data/: __init__.py  extractors.py  loaders.py
src/features/: __init__.py  clean_feature_extractor.py  feature_extractor.py
src/pipeline/: features_pipeline.py  rank_pipeline.py  recall_pipeline.py
src/rank/: DIN.py  __init__.py  base.py  clean_DIN.py
src/recall/: __init__.py  base.py  coldstart_recaller.py  fusion.py  itemcf_recaller.py  simple_cf_recaller.py  usercf_recaller.py  youtubednn_recaller.py
src/similarity/: __init__.py  base.py  embedding.py  item_cf.py  user_cf.py
src/utils/: __init__.py  config.py  persistence.py  weights.py
