[project]
name = "news_recommendation_tc"
authors = [{name = "", email = ""}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core data science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Machine learning
    "scikit-learn>=1.3.0",
    
    # Deep learning (PyTorch)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    
    # NLP & Embeddings
    "gensim>=4.3.0",
    
    # Vector similarity search
    "faiss-cpu>=1.7.4",  # Use faiss-gpu if you have GPU support
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Progress bars
    "tqdm>=4.65.0",
    
    # Utilities
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

gpu = [
    # GPU-accelerated FAISS (optional, only if you have NVIDIA GPU)
    "faiss-gpu>=1.7.4",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
